sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:18: error: not found: value Bleu
         if (getCouleur(avantBlanc) == BLANC && getCouleur(apresBleu != Bleu)) {
                                                                        ^